@@ -3,16 +3,8 @@ package kboyle.oktane.core.generation;
 import com.google.common.base.Preconditions;
 import kboyle.oktane.core.exceptions.FailedToInstantiateRuntimeModule;
 
-import javax.tools.DiagnosticCollector;
-import javax.tools.FileObject;
-import javax.tools.ForwardingJavaFileManager;
-import javax.tools.JavaCompiler;
+import javax.tools.*;
 import javax.tools.JavaCompiler.CompilationTask;
-import javax.tools.JavaFileManager;
-import javax.tools.JavaFileObject;
-import javax.tools.SimpleJavaFileObject;
-import javax.tools.StandardJavaFileManager;
-import javax.tools.ToolProvider;
 import java.io.ByteArrayOutputStream;
 import java.io.OutputStream;
 import java.lang.reflect.Constructor;
@@ -26,7 +18,6 @@ public final class RuntimeClassFactory {
     private static final List<String> COMPILATION_OPTIONS = List.of(
         "--release",
         System.getProperty("java.specification.version"),
-        "--enable-preview",
         "-g",
         "-proc:none",
         "-classpath",
